index.css
@font-face {
  font-family: Kiona;
  src: url("/assets/fonts/kiona-regular-webfont.woff");
}

@font-face {
  font-family: Quicksand-Book;
  src: url("/assets/fonts/quicksand_book-webfont.woff");
}

@font-face {
  font-family: Quicksand-Bold;
  src: url("/assets/fonts/quicksand_bold-webfont.woff");
}

html {
  scroll-behavior: smooth;
}

* {
  margin: 0 auto;
  padding: 0;
}

h1,
h2,
h3,
h4 {
  font-weight: normal;
}

.nav_on_top {
  width: 100%;
  height: 12vh;
  margin: 0 auto;
  z-index: 1;
  background-color: #d4d3be;
  transition-duration: 300ms;
  transition-property: height, background, position;
  transition-timing-function: ease-in-out;
}

.fixed-header {
  background-color: #2f4858;
  position: fixed;
  width: 100%;
  height: 9vh;
  margin: 0 auto;
  z-index: 1;
  transition-duration: 500ms;
  transition-property: height, background, position;
  transition-timing-function: ease-in-out;
}

.nav_on_top #nav_bar_inner {
  position: relative;
  width: auto;
  height: 6vh;
  margin: 0 6vw;
  top: 6vh;
  display: flex;
  flex-flow: row;
  justify-content: flex-end;
}

.fixed-header #nav_bar_inner {
  position: relative;
  width: auto;
  height: 6vh;
  margin: 0 6vw;
  top: 1.5vh;
  display: flex;
  flex-flow: row;
  justify-content: flex-end;
}

.nav_on_top #nav_bar_inner svg {
  margin: 0 auto;
  width: auto;
  height: 6vh;
  margin-right: 10px;
}

.fixed-header svg {
  margin: 0 auto;
  width: 20px;
  height: 49px;
  margin-right: 10px;
}

.fixed-header svg path {
  fill: #ffffff;
}

.nav_on_top #nav_bar_inner p {
  margin: auto;
  font-family: Kiona;
  color: #000000;
  display: inline;
  font-size: 20px;
  flex: 1;
  transition-duration: 300ms;
  transition-property: font-size;
  transition-timing-function: ease-in-out;
}

.fixed-header #nav_bar_inner p {
  font-family: Kiona;
  color: #ffffff;
  margin: auto;
  display: inline;
  font-size: 16px;
  flex: 1;
  transition-duration: 300ms;
  transition-property: font-size;
  transition-timing-function: ease-in-out;
}

.nav_on_top #nav_bar_inner ul {
  list-style-type: none;
  margin: auto;
  display: flex;
  flex-flow: row wrap;
}

.fixed-header #nav_bar_inner ul {
  list-style-type: none;
  margin: auto;
  display: flex;
  flex-flow: row wrap;
}

.nav_on_top #nav_bar_inner li {
  display: inline;
  color: #000000;
  font-family: Kiona;
  font-size: 15px;
}

.fixed-header #nav_bar_inner li {
  display: inline;
  color: #ffffff;
  font-family: Kiona;
  font-size: 15px;
}

.nav_on_top #nav_bar_inner a {
  text-decoration: none;
  color: #000000;
  padding: 10px;
  border-radius: 5px;
  margin: 3px;
  transition-duration: 350ms;
  transition-property: background, font-size;
  transition-timing-function: ease-in-out;
}

.fixed-header #nav_bar_inner a {
  text-decoration: none;
  color: #ffffff;
  padding: 10px;
  margin: 3px;
  border-radius: 5px;
  transition-duration: 350ms;
  transition-property: background, font-size;
  transition-timing-function: ease-in-out;
}

.nav_on_top #nav_bar_inner a:link {
  color: #000000;
}

.nav_on_top #nav_bar_inner a:visited {
  color: #000000;
}

.nav_on_top #nav_bar_inner a:hover,
.nav_on_top #nav_bar_inner a.active {
  background-color: #ffffff;
}

.fixed-header #nav_bar_inner a:link {
  color: #ffffff;
}

.fixed-header #nav_bar_inner a:visited {
  color: #ffffff;
}

.fixed-header #nav_bar_inner a:hover,
.fixed-header #nav_bar_inner a.active,
.on {
  background-color: #9baebc;
  color: #000000 !important;
}

#welcome_page {
  width: 100%;
  height: 100vh;
  background-color: #d4d3be;
  margin: auto;
  position: relative;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
}

#content {
  margin: auto;
  position: relative;
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
}

#right {
  width: auto;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  padding: 5px;
}

#name_popup {
  display: none;
}

#welcome_page h1,
#welcome_page h3 {
  color: #000000;
  font-family: Kiona;
  margin: auto;
  text-align: center;
}

#welcome_page h1 {
  font-size: 55px;
}

#welcome_page h3 {
  font-size: 25px;
}

#circle {
  margin: auto;
  width: 250px;
  height: 250px;
  background-image: url("assets/welcome_mini_dave.jpg");
  background-size: cover;
  background-position: -50px center;
  border-radius: 50%;
  margin-bottom: 20px;
}

#code_works {
  width: 100%;
  height: auto;
  background-color: hsl(104, 12%, 68%);
  margin: 0 auto;
  padding-bottom: 20px;
  display: flex;
  flex-flow: column; /* So put it into a column if possible else wrap it into a row*/
}

#code_works h1 {
  color: #000000;
  font-family: Kiona;
  font-size: 45px;
  margin: 0 auto;
  padding-top: 5%;
  flex: 2;
}

#code_works #langs {
  font-family: Quicksand-Book;
  color: #000000;
  text-align: center;
  margin: 50px;
  font-size: 22px;
  flex: 1;
}

#code_works #projects {
  padding-bottom: 30px;
  width: 70%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-auto-rows: 1fr;
  grid-column-gap: 30px;
  grid-row-gap: 30px;
}

#code_works a {
  margin: 0 auto;
  width: auto;
  color: #000000;
}

#code_works #box:hover h4 {
  color: black;
  background-color: #f8fff8;
}

#code_works #box:hover p {
  color: white;
}

#code_works #box:hover {
  background-color: #3f4a3c;
}

#code_works #projects h4 {
  margin: 0 auto;
  margin-top: 30px;
  font-size: 18px;
  text-align: center;
  font-family: Kiona;
  color: #ffffff;
  background-color: #1b3d2f;

  padding: 7px;
  border-radius: 5px;
  transition-duration: 350ms;
  transition-property: color, background;
  transition-timing-function: ease-in-out;
}

#code_works #projects p {
  margin: 0 auto;
  padding: 20px;
  font-size: 15px;
  text-align: center;
  font-family: Quicksand-Book;
  transition-duration: 350ms;
  transition-property: color;
  transition-timing-function: ease-in-out;
}

#code_works #box {
  background-color: white;
  border-radius: 15px;
  transition-duration: 350ms;
  transition-property: background;
  transition-timing-function: ease-in-out;
  display: flex;
  flex-direction: column;
}

#galleria {
  width: 100%;
  height: auto;
  background-color: #829c90;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#galleria h1 {
  color: #000000;
  font-family: Kiona;
  font-size: 45px;
  margin: 0 auto;
  flex: 2;
  padding-top: 5%;
}

#galleria #projects {
  margin: auto;
  margin-top: 4%;
  padding-bottom: 5%;
  margin-left: 8%;
  line-height: 0;
  column-count: 5;
  column-gap: 0px;
  width: auto;
}

#galleria #projects h4 {
  margin: 0 auto;
  font-size: 22px;
  text-align: center;
  font-family: Kiona;
}

#galleria #box,
.box1 {
  margin: 0 auto;
  margin: 0 10px 10px 0;
  position: relative;
}

#galleria #projects #box h2 {
  display: block;
  position: absolute;
  opacity: 0;
  height: 0;
  overflow: hidden;
  font-family: Kiona;
  font-size: 135%;
  color: #ffffff;
  text-align: center;
  bottom: 0px;
  border-radius: 5px;
  padding: 6%;
  width: auto;
  background-color: rgba(0, 0, 0, 0.7);
  transition-duration: 250ms;
  transition-property: opacity, height, background;
  transition-timing-function: ease-in-out;
}

#galleria #projects #box:hover h2 {
  opacity: 1;
  height: auto;
}

#galleria img {
  margin: 0 auto;
  width: 100%;
  height: auto;
  border-radius: 5px;
  vertical-align: middle;
}

#galleria .box1 img {
  height: auto;
  width: 80%;
}

#contact_me {
  height: fit-content;
  margin: 0 auto;
  display: flex;
  text-align: center;
}

#contact_me h2 {
  margin: 25px auto;
  font-family: Kiona;
  padding: 7px;
  background-color: #ffffff;
  width: fit-content;
  border-radius: 5px;
  font-size: 135%;
}

#contact_me p {
  margin: 0 auto;
  width: 70%;
  text-align: center;
  font-family: Quicksand-Book;
  font-size: 100%;
  padding-bottom: 20px;
}

#contact_me #about_me {
  width: 50%;
  height: 200px;
  margin: 0 auto;
  flex: 1;
  background-color: #b3d9d9;
}

#contact_me #links {
  width: 50%;
  height: 200px;
  margin: 0 auto;
  flex: 1;
  background-color: #7ab5b5;
}

#contact_me img {
  width: 40px;
  height: 40px;
}

#contact_me ul {
  list-style-type: none;
}

#contact_me li {
  display: inline;
}

a {
  text-decoration: none;
}

@media screen and (max-width: 800px) {
  #nav_bar_inner li a {
    font-size: 12px;
  }

  .nav_on_top #nav_bar_inner p,
  .fixed-header #nav_bar_inner p {
    font-size: 15px;
  }

  .fixed-header #nav_bar_inner a,
  .nav_on_top #nav_bar_inner a {
    padding: 7px;
  }
}

@media screen and (max-width: 1400px) {
  #welcome_page h1 {
    font-size: 40px;
  }
  #welcome_page h3 {
    font-size: 15px;
    margin-top: 10px;
    padding: 5px;
  }

  #code_works {
    padding-top: 20px;
  }

  #code_works h1 {
    font-size: 30px;
  }

  #code_works #langs {
    font-size: 15px;
  }

  #code_works #projects {
    display: flex;
    flex-direction: column;
    margin: 0;
    margin-left: 12%;
  }

  #code_works #box {
    width: 100%;
    padding: 20px;
  }

  #code_works #box h4 {
    margin: auto;
    font-size: 14px;
  }

  #code_works #box p {
    font-size: 12px;
    padding: 0;
    padding-top: 20px;
  }

  #galleria h1 {
    font-size: 30px;
    text-align: center;
  }

  #galleria #projects {
    display: flex;
    flex-direction: column;
    width: 70%;
    justify-content: center;
    align-items: center;
    margin-right: auto;
    margin-left: auto;
  }

  #galleria .box1 {
    width: 50%;
    height: auto;
  }

  #galleria #projects #box h2 {
    padding: 4%;
    font-size: 120%;
  }

  #galleria #projects .box1 h2 {
    padding: 7% !important;
  }

  #contact_me {
    display: flex;
    flex-direction: column;
    position: relative;
    margin: 0 auto;
  }

  #about_me,
  #links {
    width: 100vw !important;
    padding-bottom: 2vh;
  }

  #contact_me h2 {
    font-size: 100%;
  }

  #contact_me p {
    font-size: 90%;
  }
}

